--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<section id="mobile-menu">
 			<div>
 				<h1>
-				<a href="index.html">Home</a>
+				<a href="index.html">Loucrèce</a>
 				</h1>
 				<button id="close-menu-button">
 				<img src="images/close.svg" alt="close menu">
